build.out
warn.c: In function ¡®main¡¯:
warn.c:4:5: warning: implicit declaration of function ¡®print¡¯ [-Wimplicit-function-declaration]
     print("%d\n', a);
     ^
warn.c:4:11: warning: missing terminating " character [enabled by default]
     print("%d\n', a);
           ^
warn.c:4:5: error: missing terminating " character
     print("%d\n', a);
     ^
warn.c:5:1: error: expected expression before ¡®}¡¯ token
 }
 ^
warn.c:5:1: error: expected ¡®;¡¯ before ¡®}¡¯ token
warn.c:3:9: warning: unused variable ¡®a¡¯ [-Wunused-variable]
     int a = 'a';
         ^
warn.c:5:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^